# asynchronous-messages-exchanger

./: CMakeLists.txt  README.md  docker-compose.yml  task.md  udp_task.md
client/: CMakeLists.txt  client-udp.cpp  client-udp.hpp  dockerfile
docs/: main-view.drawio
include/: safedequeue.hpp  safemap.hpp  safequeue.hpp  safevector.hpp  utils.hpp
libs/: CMakeLists.txt
libs/custom-exceptions/: CMakeLists.txt  broken_pipe_exception.cpp  broken_pipe_exception.hpp  create_socket_exception.cpp  create_socket_exception.hpp  recv_data_exception.cpp  recv_data_exception.hpp  send_data_exception.cpp  send_data_exception.hpp
libs/datapacket/: CMakeLists.txt  datapacket.cpp  datapacket.hpp
libs/timer/: CMakeLists.txt  timer.cpp  timer.hpp
server/: CMakeLists.txt  dockerfile  server-udp.cpp  server-udp.hpp
